--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,3 +15,30 @@ body {
   padding-top: 10px;
   height: 60px;
 }
+
+.table-pricelist tr.active {
+  background-color: #000000 !important;
+  color: red;
+}
+
+.close {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 18px;
+  color: #000000;
+  text-shadow: 0 1px 0 #ffffff;
+  opacity: 0.2;
+  filter: alpha(opacity=20);
+  text-decoration: none;
+
+  position: absolute;
+  top: 10px;
+  right: 25px;
+}
+.close:hover {
+  color: #000000;
+  text-decoration: none;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  cursor: pointer;
+}
